--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.4.3",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.2",
     "react": "^18.3.1",
