--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
+    "@szhsin/react-accordion": "^1.4.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "framer-motion": "^12.4.3",
@@ -13,8 +14,10 @@
     "mongoose": "^8.9.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "sass": "^1.85.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
